add meta description tag to index.html

--- a/public/index.html
+++ b/public/index.html
@@ -5,6 +5,11 @@
     <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="description" content=" Project Box helps you record how you made that thing! Like grandma's
+    old recipe book, Project Box is a reliable reference that helps you
+    remember the recipe for your project.  Record your projects with ease, simply input your materials list,
+    process pictures, steps, and any other notes relevant to your
+    project" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
